# simplegreet

./: README.md  actions.c  config.c  config.h  error  greeter.c  greeter.h  main.c  meson.build  meson_options.txt  proto.c  proto.h  window.c  window.h
extra/: style.css
